--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "homepage": "https://samsha1.github.io",
   "dependencies": {
-    "@material-ui/core": "^3.0.2",
+    "@material-ui/core": "^4.0.0",
+    "@material-ui/icons":"4.11.3",
     "autoprefixer": "7.1.6",
     "axios": "^0.21.1",
     "babel-core": "6.26.0",
